# MAFM

./: pyproject.toml
mafm/: __init__.py  observer.py  shell.py
mafm/agent/: __init__.py  graph.py
mafm/agent/agents/: __init__.py  analyst.py  llm_model.py  member.py  supervisor.py  tools.py
mafm/rag/: __init__.py  embedding.py  fileops.py  sqlite.py  vectorDb.py  vector_db.py
tests/: __init__.py  embedding_test.py  milvus_test.py
